--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link rel="stylesheet" href="./css/styles.css"> <!-- Links the css file to the html -->
-		<title>Hello World</title> <!-- Makes the browser tab have a name -->
+		<link rel="stylesheet" href="./css/styles.css"> <!-- Links the css file to the html file -->
+		<title>Hello World</title> <!-- Makes the browser tab have a awesome name -->
 	</head>
 	<body>
+		<script src="./javascript/script.js"></script> <!-- Adds a script to your cool website -->
 		<img src="./images/namehere.filetypehere"> <!-- Makes a cool little image -->
 		<h1>Hello World!</h1> <!-- Makes a large header -->
 	</body>
